@@ -38,6 +38,10 @@ The following CVEs were fixed in this release:
     assert: Buffer overflow when printing assertion failure message
     (CVE-2025-0395)
 
+  GLIBC-SA-2026-0003
+    wordexp with WRDE_REUSE and WRDE_APPEND may return uninitialized
+    memory (CVE-2025-15281)
+
 The following bugs are resolved with this release:
 
   [19341] ctype: Fallback initialization of TLS using relocations
@@ -109,6 +113,8 @@ The following bugs are resolved with this release:
   [33234] Use TLS initial-exec model for __libc_tsd_CTYPE_* thread variables
   [33361] nss: Group merge does not react to ERANGE during merge
   [33601] aarch64: Do not link conform tests with -Wl,-z,force-bti
+  [33814] glob: wordexp with WRDE_REUSE and WRDE_APPEND may return
+    uninitialized memory
 
 Version 2.39
 
